manifests/databases/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-route-postgres
  namespace: db
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      priority: 10
      services:
        - name: postgres-rw
          port: 5432
